# bci-poc

./: .gitignore  README.md  docker-compose-with-b2g-and-private-bitcoind.yml  docker-compose-with-b2g-and-public-bitcoind.yml  docker-compose.yml
data/bitcoind/: README.md
data/neo4j/: README.md
src/: CMakeLists.txt  Common.h  Inspector.h  Rules.h  hello.cc  main.cpp
src/helloWorld/: hello.cc
